added content in main section

--- a/flipkart.css
+++ b/flipkart.css
@@ -5,20 +5,6 @@
 nav div.search{
     flex-grow: 0.5;
 }
-/* 
-.search-icon{
-    margin-left: -1px;
-} */
-
-/* .search-icon svg{
-    margin-top: 15px;
-    margin: auto;
-}
-
-.cart svg{
-    margin-top: 15px;
-    margin: auto;
-} */
 
 .dropdown-menu {
     left: -58px !important;
@@ -31,4 +17,8 @@ nav div.search{
 
 .view-all{
     width: 80%;
+}
+
+.carousel:hover {
+    display: block;
 }
