--- a/flipkart.css
+++ b/flipkart.css
@@ -4,10 +4,6 @@
   font-family: "Roboto", sans-serif;
 }
 
-nav div.search {
-  flex-grow: 0.5;
-}
-
 .navbar-toggler {
   left: 2px;
 }
@@ -20,16 +16,29 @@ nav div.search {
   display: block;
 }
 
+.main-section {
+  width: 95vw;
+}
+
 .form-control {
   opacity: 0.3;
 }
+
+.deals-head{
+  width: 86%;
+}
+
+.button {
+  height: 38%;
+}
+
 .card {
-  width: 14rem;
+  min-width: 14rem;
   border: 0rem !important;
 }
 
-.carousel:hover {
-  display: block;
+.search{
+  flex-grow: 3;
 }
 
 .search-icon {
@@ -50,22 +59,13 @@ nav div.search {
   min-width: 50px;
 }
 
-.deal-section {
-  width: 70em;
-}
-
 .deals-card {
   width: 200px !important;
-  /* padding: 20px; */
   text-align: center;
 }
 
 .deals-card .card-body p {
   margin: 0;
-}
-
-.deal-section .deals-section-inner {
-  width: 66em;
 }
 
 @media only screen and (max-width: 415px) {
@@ -103,7 +103,7 @@ nav div.search {
     justify-content: start !important;
   }
 
-  .main-section{
+  .main-section {
     overflow: auto;
     justify-content: start !important;
   }
