added some transition effects

--- a/flipkart.css
+++ b/flipkart.css
@@ -31,7 +31,9 @@
 .button {
   height: 38%;
 }
-
+.seller{
+  margin: auto;
+}
 .card {
   min-width: 14rem;
   border: 0rem !important;
@@ -43,6 +45,7 @@
 
 .search-icon {
   margin-left: -1px;
+  right: 0;
 }
 
 .login-btn {
@@ -67,14 +70,21 @@
 .deals-card .card-body p {
   margin: 0;
 }
+.menubar-item {
+  transition: transform 0.3s ease;
+}
+.menubar-item:hover{
+  transform: scale(1.1);
+}
 
 @media only screen and (max-width: 415px) {
   .navbar {
     min-height: 120px;
   }
+
   nav div.search {
     position: relative;
-    top: 40px;
+    top: 33px;
     left: 0px;
     width: 100%;
   }
@@ -107,4 +117,34 @@
     overflow: auto;
     justify-content: start !important;
   }
+
+  .advertise{
+    display: none !important;
+  }
+
+  .deals-head{
+    width: 100%;
+  }
+
+  .carousel{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .more{
+    margin-right: 75px;
+    
+  }
+  .seller{
+    margin-right: 135px;
+  }
+
+  .cart{
+    margin-right: 100px;
+  }
+
+
 }
+
+
