--- a/flipkart.css
+++ b/flipkart.css
@@ -31,9 +31,11 @@
 .button {
   height: 38%;
 }
+
 .seller {
   margin: auto;
 }
+
 .card {
   min-width: 14rem;
   border: 0rem !important;
@@ -70,9 +72,11 @@
 .deals-card .card-body p {
   margin: 0;
 }
+
 .menubar-item {
   transition: transform 0.3s ease;
 }
+
 .menubar-item:hover {
   transform: scale(1.1);
 }
@@ -93,11 +97,13 @@
     left: 0px;
     width: 100%;
   }
+
   .title {
     top: -15px;
     left: 72px;
     position: absolute;
   }
+
   .navbar-collapse {
     position: absolute;
     background-color: #2874f0;
@@ -106,9 +112,11 @@
     padding: 20px;
     z-index: 2;
   }
+
   .login {
     flex-direction: column;
   }
+
   .navbar-toggler {
     z-index: 10;
   }
@@ -135,11 +143,13 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    margin-left: 0 !important;
   }
 
   .more {
     margin-right: 75px;
   }
+
   .seller {
     margin-right: 135px;
   }
