--- a/flipkart.css
+++ b/flipkart.css
@@ -124,6 +124,18 @@
     flex-direction: column;
   }
 
+  .toys{
+    display: none;
+  }
+
+  .beauty{
+    display: none;
+  }
+
+  .top{
+    display:none
+  }
+  
   .navbar-toggler {
     z-index: 10;
   }
