add border bottom in deal section

--- a/flipkart.css
+++ b/flipkart.css
@@ -17,14 +17,14 @@
 }
 
 .main-section {
-  width: 95vw;
+  width: 92vw;
 }
 
 .form-control {
-  opacity: 0.3;
+  opacity: 0.9;
 }
 
-.seller{
+.seller {
   width: 8rem;
 }
 .deals-head {
@@ -33,6 +33,14 @@
 
 .button {
   height: 38%;
+}
+
+.deals-of-the-day {
+  width: 95%;
+}
+
+.deal-section {
+  width: 100%;
 }
 
 .seller {
@@ -49,8 +57,11 @@
 }
 
 .search-icon {
-  margin-left: -1px;
   right: 0;
+}
+
+.carousel {
+  width: 95%;
 }
 
 .login-btn {
@@ -67,7 +78,15 @@
   min-width: 50px;
 }
 
-.deals-card{
+.advertise {
+  padding: 5px;
+  margin-left: 10px;
+}
+.advertise img{
+  height: 100%;
+}
+
+.deals-card {
   border: 0rem;
 }
 
@@ -78,6 +97,9 @@
 
 .deals-card .card-body p {
   margin: 0;
+}
+.deals-head{
+  width: 83%;
 }
 
 .menubar-item {
@@ -111,6 +133,14 @@
     position: absolute;
   }
 
+  .carousel-item {
+    height: 150px;
+  }
+
+  .carousel-item img {
+    object-fit: cover;
+  }
+
   .navbar-collapse {
     position: absolute;
     background-color: #2874f0;
@@ -124,18 +154,18 @@
     flex-direction: column;
   }
 
-  .toys{
+  .toys {
     display: none;
   }
 
-  .beauty{
+  .beauty {
     display: none;
   }
 
-  .top{
-    display:none
+  .top {
+    display: none;
   }
-  
+
   .navbar-toggler {
     z-index: 10;
   }
@@ -150,6 +180,10 @@
     justify-content: start !important;
   }
 
+  .deal-section{
+    width: 100%;
+  }
+
   .advertise {
     display: none !important;
   }
@@ -159,8 +193,7 @@
   }
 
   .carousel {
-    height: 100%;
-    width: 100%;
+    width: 70%;
     object-fit: cover;
     margin-left: 0 !important;
   }
