--- a/flipkart.css
+++ b/flipkart.css
@@ -18,6 +18,7 @@
 
 .main-section {
   width: 92vw;
+  box-shadow: 3px 3px 10px 7px #ccc;
 }
 
 .form-control {
@@ -60,8 +61,9 @@
   right: 0;
 }
 
-.carousel {
-  width: 95%;
+.slider{
+  width: 92vw;
+  box-shadow: 3px 3px 10px 7px #ccc;
 }
 
 .login-btn {
@@ -82,7 +84,7 @@
   padding: 5px;
   margin-left: 10px;
 }
-.advertise img{
+.advertise img {
   height: 100%;
 }
 
@@ -98,7 +100,7 @@
 .deals-card .card-body p {
   margin: 0;
 }
-.deals-head{
+.deals-head {
   width: 83%;
 }
 
@@ -115,7 +117,7 @@
   color: white;
 }
 
-@media only screen and (max-width: 415px) {
+@media only screen and (max-width: 414px) {
   .navbar {
     min-height: 120px;
   }
@@ -141,6 +143,10 @@
     object-fit: cover;
   }
 
+  .slider{
+    margin-top: 2px;
+  }
+  
   .navbar-collapse {
     position: absolute;
     background-color: #2874f0;
@@ -180,8 +186,12 @@
     justify-content: start !important;
   }
 
-  .deal-section{
+  .deal-section {
     width: 100%;
+  }
+
+  .main-section .button{
+    padding: 10px !important;
   }
 
   .advertise {
